angularapp/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-app
spec:
  selector:
    matchLabels:
      app: angular-app
  template:
    metadata:
      labels:
        app: angular-app
    spec:
      containers:
      - name: angular-app
        image: danieljin/angular-front-end-nov-2021:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
